# instagram_account_manager

./: .env.example  .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
models/: accounts.py  db.py  niche_profile.py
niches/: business_finance.json  fitness_wellness.json  food_lifestyle.json  tech_developer.json  travel_lifestyle.json
routes/: accounts.py  ai.py  auth.py  calendar.py  instagram.py  kpi.py  niches.py  scheduler_routes.py
services/: cerebras_service.py  flow_service.py  instagram_service.py  provider_router.py  scheduler_service.py  sheets_service.py
services/providers/: __init__.py  cerebras_provider.py  claude_provider.py  gemini_provider.py  openai_provider.py
static/: index.html
static/css/: dashboard.css
static/js/: api.js  dashboard.js
